--- a/readme
+++ b/readme
@@ -1,8 +1,10 @@
-# Homework 2 - Neural Network Architecture Analysis
+# MNIST Neural Network Architecture Exploration
 
-## Q1. Based on the model summary, calculate and justify the number of parameters.
+## Homework Questions and Answers
 
-For the original model:
+### Q1. Based on the model summary, calculate and justify the number of parameters.
+
+The original model architecture:
 ```python
 model = Sequential()
 model.add(Dense(64, activation='relu', input_shape=(784,)))  # [1]
@@ -10,34 +12,28 @@ model.add(Dense(64, activation='relu'))  # [2]
 model.add(Dense(10, activation='softmax'))
 ```
 
-Parameters calculation:
-- **First Dense layer (dense_3)**: 50,240 parameters
-  - Input neurons: 784 (flattened 28×28 MNIST images)
-  - Output neurons: 64
+**Parameter calculations:**
+
+- **First layer (Dense 784→64)**: 50,240 parameters
   - Weights: 784 × 64 = 50,176
   - Biases: 64
   - Total: 50,176 + 64 = 50,240
 
-- **Second Dense layer (dense_4)**: 4,160 parameters
-  - Input neurons: 64 (from previous layer)
-  - Output neurons: 64
+- **Second layer (Dense 64→64)**: 4,160 parameters
   - Weights: 64 × 64 = 4,096
   - Biases: 64
   - Total: 4,096 + 64 = 4,160
 
-- **Output Dense layer (dense_5)**: 650 parameters
-  - Input neurons: 64 (from previous layer)
-  - Output neurons: 10 (for digits 0-9)
+- **Output layer (Dense 64→10)**: 650 parameters
   - Weights: 64 × 10 = 640
   - Biases: 10
   - Total: 640 + 10 = 650
 
-**Total parameters**: 50,240 + 4,160 + 650 = 55,050
+**Total parameters**: 55,050
 
-## Q2. Add Batch Normalization and 20% Dropout following [1] and [2]. Compare the results from Q1.
+### Q2. Add Batch Normalization and 20% Dropout following [1] and [2]. Compare the results from Q1.
 
-When adding BatchNormalization and Dropout after layers [1] and [2]:
-
+Modified architecture with regularization:
 ```python
 model = Sequential()
 model.add(Dense(64, activation='relu', input_shape=(784,)))  # [1]
@@ -49,28 +45,21 @@ model.add(Dropout(0.2))
 model.add(Dense(10, activation='softmax'))
 ```
 
-**Parameter comparison**:
-- Original model (Q1): 55,050 parameters (all trainable)
-- Regularized model (Q2): 55,562 parameters
-  - Trainable parameters: 55,306
-  - Non-trainable parameters: 256
+**Results comparison:**
+- Original model: 55,050 parameters (all trainable)
+- Regularized model: 55,562 parameters
+  - 55,306 trainable parameters
+  - 256 non-trainable parameters (from BatchNorm)
 
-The difference is due to BatchNormalization layers, which each add:
-- 2 trainable parameters per neuron (gamma, beta)
-- 2 non-trainable parameters per neuron (moving mean, moving variance)
-- For 64 neurons: 4 × 64 = 256 parameters per BatchNorm layer
+The BatchNormalization layers add 256 parameters each:
+- 128 trainable parameters (gamma and beta for each neuron)
+- 128 non-trainable parameters (moving mean and variance)
 
-Dropout layers don't add any parameters.
+The regularized model maintains similar performance (96.99% vs 97.01% accuracy) while potentially offering better generalization through regularization techniques.
 
-**Performance comparison**:
-- The regularized model achieved 96.99% validation accuracy
-- Both models had similar final performance, but the regularized model shows better generalization properties
-- BatchNormalization helps with internal covariate shift
-- Dropout helps prevent overfitting by randomly deactivating neurons during training
+### Q3. Let's build a deeper network by (i) increasing neurons from 64 to 128, or (ii) adding another dense layer after [1]. Compare the results from Q2.
 
-## Q3. Let's build a deeper network by (i) increasing neurons from 64 to 128, or (ii) adding another dense layer after [1]. Compare the results from Q2.
-
-### Option (i): Increasing neurons from 64 to 128
+**Option (i): Wider network (128 neurons)**
 ```python
 model = Sequential()
 model.add(Dense(128, activation='relu', input_shape=(784,)))
@@ -82,13 +71,13 @@ model.add(Dropout(0.2))
 model.add(Dense(10, activation='softmax'))
 ```
 
-### Option (ii): Adding another dense layer after [1]
+**Option (ii): Deeper network (additional layer)**
 ```python
 model = Sequential()
 model.add(Dense(64, activation='relu', input_shape=(784,)))
 model.add(BatchNormalization())
 model.add(Dropout(0.2))
-model.add(Dense(64, activation='relu'))  # New layer
+model.add(Dense(64, activation='relu'))  # Added layer
 model.add(BatchNormalization())
 model.add(Dropout(0.2))
 model.add(Dense(64, activation='relu'))
@@ -97,18 +86,12 @@ model.add(Dropout(0.2))
 model.add(Dense(10, activation='softmax'))
 ```
 
-**Comparison with Q2**:
+**Comparison:**
 
-| Model | Parameters | Val Accuracy | Parameter Increase |
-|-------|------------|--------------|-------------------|
-| Q2 (Base) | 55,562 | 96.78% | - |
-| Wider (Option i) | 119,306 | 97.50% | +63,744 |
-| Deeper (Option ii) | 59,978 | 96.86% | +4,416 |
+| Model | Parameters | Accuracy | Δ Parameters |
+|-------|------------|----------|--------------|
+| Q2 Baseline | 55,562 | 96.78% | - |
+| Wider (128 neurons) | 119,306 | 97.50% | +63,744 |
+| Deeper (extra layer) | 59,978 | 96.86% | +4,416 |
 
-**Analysis**:
-1. The wider model (option i) achieves the best accuracy at 97.50% but requires more than double the parameters
-2. The deeper model (option ii) provides a slight improvement with only 7.9% more parameters
-3. The wider model has better representational capacity but is less parameter-efficient
-4. Both approaches outperform the Q2 model, showing that either increasing width or depth can improve performance
-
-In conclusion, the wider network with 128 neurons provides the best overall performance, while the deeper network offers a more parameter-efficient improvement.
+The wider model achieves the best accuracy but requires significantly more parameters. The deeper model offers a more parameter-efficient improvement with a modest accuracy gain.
